force-app/main/default/objects/ManutencaoPreventivadeApoio__c/ManutencaoPreventivadeApoio__c.object-meta.xml
<CustomObject>
    <label>Plano de Manutenção Preventiva</label>
    <nameField>
        <displayFormat>PMP {00}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planos de Manutenção Preventiva</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>