force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ativo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Planos de Manutenção Preventiva</relationshipLabel>
    <relationshipName>Planos_de_Manuten_o_Preventiva</relationshipName>
    <type>Lookup</type>
</CustomField>