force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/Categoria_Patrimonial__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Patrimonial__c</fullName>
    <formula>TEXT(Ativo__r.Categoria_Patrimonial__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria Patrimonial</label>
    <type>Text</type>
</CustomField>