force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/Conta_Dias__c.field-meta.xml
<CustomField>
    <fullName>Conta_Dias__c</fullName>
    <formula>Data_de_Validade__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conta Dias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>