force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/DatadaExecucao__c.field-meta.xml
<CustomField>
    <fullName>DatadaExecucao__c</fullName>
    <label>Data da Execução da Manutenção</label>
    <type>Date</type>
</CustomField>