force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Em que se encontra o equipamento.</inlineHelpText>
    <label>Empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Manuten_es_Preventivas_de_Apoio_del</relationshipName>
    <type>Lookup</type>
</CustomField>