force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/Equipamento_de_Apoio__c.field-meta.xml
<CustomField>
    <fullName>Equipamento_de_Apoio__c</fullName>
    <label>Equipamento de Apoio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>