force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <formula>Ativo__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local</label>
    <type>Text</type>
</CustomField>