force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/Nome_respons_vel__c.field-meta.xml
<CustomField>
    <fullName>Nome_respons_vel__c</fullName>
    <formula>Responsavel__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome responsável</label>
    <type>Text</type>
</CustomField>