force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/Numero_de_serie__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_serie__c</fullName>
    <formula>Ativo__r.SerialNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de série</label>
    <type>Text</type>
</CustomField>