force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/Patrimanio__c.field-meta.xml
<CustomField>
    <fullName>Patrimanio__c</fullName>
    <formula>Ativo__r.patrimonio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patrimônio</label>
    <type>Text</type>
</CustomField>