force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/Prazo__c.field-meta.xml
<CustomField>
    <fullName>Prazo__c</fullName>
    <formula>IF((TODAY() - Data_de_Validade__c) &lt; 0, &apos;conforme&apos;, &apos;vencido&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo</label>
    <type>Text</type>
</CustomField>