force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/Prazo_Restante__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Restante__c</fullName>
    <formula>IF(
Conta_Dias__c &gt; 1,
TEXT(Conta_Dias__c ) &amp; &quot; Dias p/ Vencer&quot;,
IF(
Conta_Dias__c = 1,
&quot;Vence Amanhã&quot;,
IF(
Conta_Dias__c = 0,
&quot;Vence Hoje&quot;,
IF(
Conta_Dias__c = -1,
TEXT(Conta_Dias__c *(-1)) &amp; &quot; Dia Vencido&quot;,
TEXT(Conta_Dias__c *(-1)) &amp; &quot; Dias Vencido&quot;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo Restante</label>
    <type>Text</type>
</CustomField>