force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planos_de_Manuten_o_Preventiva</relationshipName>
    <type>Lookup</type>
</CustomField>