force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IMAGE( Status_Imagem__c , &quot;&quot; , 45, 45)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>