force-app/main/default/objects/ManutencaoPreventivadeApoio__c/fields/Status_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Status_TEXT__c</fullName>
    <formula>IF(
    Conta_Dias__c &gt; 2,
    &quot;EM DIA&quot;,
    &quot;VENCIDO&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status TEXT</label>
    <type>Text</type>
</CustomField>