force-app/main/default/objects/ManutencaoPreventivadeApoio__c/listViews/ABC_TO.listView-meta.xml
<ListView>
    <fullName>ABC_TO</fullName>
    <columns>NAME</columns>
    <columns>Equipamento_de_Apoio__c</columns>
    <columns>Empresa__c</columns>
    <columns>Responsavel__c</columns>
    <columns>DatadaExecucao__c</columns>
    <columns>Data_de_Validade__c</columns>
    <columns>Prazo_Restante__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CNPJ__c</field>
        <operation>equals</operation>
        <value>40.014.621/0001-49</value>
    </filters>
    <label>ABC TO</label>
</ListView>