force-app/main/default/objects/ManutencaoPreventivadeApoio__c/listViews/C_pia_de_HOSPCOM_2_FILIAL_DF.listView-meta.xml
<ListView>
    <fullName>C_pia_de_HOSPCOM_2_FILIAL_DF</fullName>
    <columns>NAME</columns>
    <columns>Equipamento_de_Apoio__c</columns>
    <columns>Empresa__c</columns>
    <columns>Responsavel__c</columns>
    <columns>DatadaExecucao__c</columns>
    <columns>Data_de_Validade__c</columns>
    <columns>Prazo_Restante__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CNPJ__c</field>
        <operation>equals</operation>
        <value>05.743.288/0008-84</value>
    </filters>
    <label>HOSPCOM MG</label>
</ListView>