force-app/main/default/objects/ManutencaoPreventivadeApoio__c/listViews/C_pia_de_HOSPCOM_SP_CAPITALas.listView-meta.xml
<ListView>
    <fullName>C_pia_de_HOSPCOM_SP_CAPITALas</fullName>
    <columns>NAME</columns>
    <columns>Equipamento_de_Apoio__c</columns>
    <columns>Empresa__c</columns>
    <columns>Responsavel__c</columns>
    <columns>DatadaExecucao__c</columns>
    <columns>Data_de_Validade__c</columns>
    <columns>Prazo_Restante__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CNPJ__c</field>
        <operation>equals</operation>
        <value>05.743.288/0009-65</value>
    </filters>
    <label>HOSPCOM AMAZONAS</label>
</ListView>