force-app/main/default/objects/ManutencaoPreventivadeApoio__c/listViews/GDB.listView-meta.xml
<ListView>
    <fullName>GDB</fullName>
    <columns>NAME</columns>
    <columns>Equipamento_de_Apoio__c</columns>
    <columns>Empresa__c</columns>
    <columns>Responsavel__c</columns>
    <columns>DatadaExecucao__c</columns>
    <columns>Data_de_Validade__c</columns>
    <columns>Prazo_Restante__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Empresa__c</field>
        <operation>contains</operation>
        <value>GDB</value>
    </filters>
    <label>GDB</label>
</ListView>